<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cétaki</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="T_TpsAnim">Durée de l\'animation: </string>
    <string name="Hint_TpsAnim">sec</string>
    <string name="CB_TirageExclusif">Exclure les résultats enregistrés</string>
    <string name="S_TpsAnimPrompt">3</string>
    <string name="T_sec">sec</string>

    <string-array name="S_TpsAnim">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="edit_list">Editer la liste</string>
    <string name="mes_listes">Mes listes</string>
    <string name="menu_about">Aides et informations</string>
    <string name="action_spinner">Liste existante</string>
    <string name="B_AjManuel">Ajouter</string>
    <string name="B_Fin">Fin</string>
    <string name="input_nomlist">Nom de la liste sans , / \' et Espace</string>
    <string name="favoris">Favoris</string>
    <string name="creer_list">Créer une nouvelle liste</string>
    <string name="ET_Result">Résultat</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Supp">Supp</string>
    <string name="Editer">Editer</string>
    <string name="Desactiver">Activer</string>
    <string name="ET_NomList">Nom de la liste</string>
    <string name="editer_list">Editer la liste</string>
    <string name="title_activity_mes_listes">MesListes</string>
        <string name="Ajouter_liste">Ajouter</string>
    <string name="Supp_liste">Supp</string>
    <string name="Editer_list">Editer</string>
    <string name="Desactiver_list">Activer</string>
        <string name="Login">Login</string>
         <string name="Create_Account">Create account</string>
</resources>
