<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#00b8ff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Ajouter"
            android:layout_width="70dip"
            android:layout_height="46dip"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="2dip"
            android:background="#ff2f82"
            android:text="@string/Ajouter"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Supp"
            android:layout_width="70dip"
            android:layout_height="46dip"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="2dip"
            android:background="#ff2f82"
            android:text="@string/Supp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Editer"
            android:layout_width="70dip"
            android:layout_height="46dip"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="2dip"
            android:background="#ff2f82"
            android:text="@string/Editer"
            android:textSize="16sp" />

 </LinearLayout> 

 
    <ListView
        android:id="@+id/LV_editlist"
        android:layout_width="match_parent"
        android:layout_height="370dip"
        android:choiceMode="multipleChoice" />

</LinearLayout>